modify some style and fix overflow

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,12 +2,13 @@
     font-weight: 400;
 }
 .about-page{
-    height: 78vh;
+    height: 100vhvh;
     /* margin-top: 40px; */
+    overflow-x: hidden;
     background: url("https://cdn.pixabay.com/photo/2017/03/09/20/53/microphone-2130806_1280.jpg");
 }
 .about-img{
     border-radius: 50%;
-    height: 300px;
-    width: 300px;
+    /* height: 300px; */
+    /* width: 300px; */
 }
