--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,8 +2,17 @@
     list-style: none;
     text-align: left;
 }
+.ul-list p{
+    background-color:rgb(234, 237, 243);
+    padding:2px 6px;
+    border-radius: 5px;
+    color: black;
+    font-weight: bold;
+}
 .contact-us{
     /* background-color: rgb(88, 93, 102); */
-    background: url("https://cdn.pixabay.com/photo/2015/12/03/22/15/tablet-1075790_1280.jpg");
+    background: url("https://cdn.pixabay.com/photo/2015/12/03/22/15/tablet-1075790_1280.jpg")no-repeat center center/cover;
     width: 100%;
+    margin: auto;
+    overflow-x: hidden;
 }
